# QLiveStyleEditor

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
demo/: demo.cpp  demomainwindow.cpp  demomainwindow.h
resources/: demo.qss  style.qss
src/: main.cpp  qlivestyleeditor.cpp  qlivestyleeditor.h
